adding cmake module for doc/

--- a/doc/mainpage.dox
+++ b/doc/mainpage.dox
@@ -1,5 +1,5 @@
 /**
-\mainpage FlexibleSUSY @FLEXIBLESUSY_VERSION@
+\mainpage FlexibleSUSY
 \tableofcontents
 
 <a href="https://flexiblesusy.hepforge.org/">FlexibleSUSY</a> provides
